[package]
name = "mut-str"
version = "1.0.0-alpha.1"
authors = ["Tom Boddaert"]
edition = "2021"
description = "A toolkit for mutable string slices (&mut str)."
readme = "README.md"
homepage = "https://github.com/tomBoddaert/mut-str"
repository = "https://github.com/tomBoddaert/mut-str"
license = "MIT OR Apache-2.0"
keywords = ["mutability", "string", "slice"]
categories = ["text-processing", "no-std"]

[lib]
name = "mut_str"
path = "lib/lib.rs"
edition = "2021"
crate-type = ["lib"]

[features]
default = ["std"]
std = []
